# mining-beyond-boundaries

./: .gitignore  README.md  pyproject.toml  requirements.txt  rules.md
docs/: proposal.md
notebooks/: 01-image-EDA-(a).histogram.analysis.ipynb  01-image-EDA.constrast.n.brightness.analysis.ipynb  01-image-preprocessing-(b).color.conversion.ipynb  01-image-preprocessing.resize.ipynb  02-table-EDA-(c).missing.value.ipynb  02.bonus-table-(f).imbalance.handler.ipynb  03-time.series-EDA.correlation.structure.ipynb  03-time.series-EDA.data.components.ipynb  03-time.series-EDA.rolling.statistic.ipynb  03-time.series-preprocessing-(b).stationarity.testing.ipynb  03-time.series-preprocessing.feature.matrix.prediction.ipynb  Bao-image.histogram.analysis.ipynb  Bao-preprocessing.feature.selection.tabular.ipynb  Bao-preprocessing.normalization.ipynb  Bao-preprocessing_normalization.ipynb  Bao-time.series.analysis.stationarity.testing.ipynb  Duy-image.constrast.n.brightness.analysis.ipynb  Duy-table.analysis.distribution.inspect.ipynb  Duy-table.analysis.missing.value.ipynb  Duy-table.imbalance.handler.ipynb  Duy-time.series.preprocessing.decomposition.ipynb  Duy-timeseries.preprocessing.decomposition.ipynb  Hoang-image.imbalance.analysis.ipynb  Hoang-preprocessing.resize.ipynb  Hoang-table.preprocessing.detect.outlier.ipynb  Hoang-time.preprocessing.detect.outlier.ipynb  Hoang-time.series.preprocessing.detect.outlier.ipynb  Hung-image.bonus.analysis.edge.detection.ipynb  Hung-image.bonus.analysis.feature.space.ipynb  Hung-image.deduplicate.process.ipynb  (+14 more)
src/: config.py
(+62 files in other folders)
