[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "data-mining-preprocessing-project"
version = "0.1.0"
description = "Data mining preprocessing utilities"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["config", "utils"]